--- a/src/StartingamesSettings/StartingamesSettings.module.scss
+++ b/src/StartingamesSettings/StartingamesSettings.module.scss
@@ -33,6 +33,8 @@
 }
 
 .bigMenuButton{
+    padding: 15px 0px;
+
     width: 80%;
     cursor: pointer;
 
@@ -47,7 +49,7 @@
 
 .bigMenuButton>.logo
 {
-    width: 30%;
+    width: 25%;
     margin:auto;
 }
 
